--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,8 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.11.10",
     "@types/supertest": "^6.0.2",
+    "fuse.js": "^7.0.0",
+    "fuzzy-search": "^3.2.1",
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.2",
